--- a/public/ds-book-r/index.html
+++ b/public/ds-book-r/index.html
@@ -736,8 +736,8 @@ Phân tích dữ liệu là gì?
 <h2 data-number="1.1" class="anchored" data-anchor-id="tại-sao-phân-tích-dữ-liệu-là-nghề-khó"><span class="header-section-number">1.1</span> Tại sao phân tích dữ liệu là nghề khó?</h2>
 <p>Theo quan sát cá nhân, phần lớn, các bạn làm trong ngành phân tích dữ liệu rơi vào một trong hai nhóm sau:</p>
 <ul>
-<li><p>Nhóm một, <strong>chưa có nền tảng về phân tích thống kê</strong>. Ở nhóm này, các bạn thường không được đào tạo bài bản hoặc không có đủ điều kiện (phần lớn là về thời gian) để học các kiến thức về phân tích thống kê. Do nhu cầu của công việc, các bạn có thành thạo các kỹ năng về xây dựng báo cáo và phân tích khám phá dữ liệu đơn giản với SQL và Excel. Các bạn này thường thuộc các nhóm phân tích báo cáo (Business Intelligence) tại các tổ chức lớn hoặc làm trong startup. Điểm mạnh của nhóm này là làm việc sát với các bộ phận kinh doanh, hiểu rõ nghiệp vụ và nhu cầu nghiệp vụ. Tuy nhiên, điểm yếu của các bạn lại là không thể ứng dụng hoặc tự học và không biết cách triển khai các ứng dụng của khoa học dữ liệu ở mức độ cao vào công việc thực tế.</p></li>
-<li><p>Nhóm hai, <strong>có nền tảng vững vàng về kiến thức thống kê, dự báo nhưng lại quá chú trọng vào các yếu tố kỹ thuật</strong>. Ở nhóm này, các bạn đều có nền tảng kiến thức về toán, thống kê rất tốt. Một số bạn được học và đào tạo cơ bản về khoa học dữ liệu, học máy và các ứng dụng của khoa học dữ liệu. Các bạn này có thiên hướng thích xây dựng mô hình dự báo, thích làm các bài toán lớn trong kinh doanh. Điểm mạnh của nhóm này là rất thông minh, chịu khó học hỏi và có thể áp dụng những kỹ thuật phân tích mới vào thực tế một cách nhanh chóng. Nhưng ngược lại, nhóm này lại có nhược điểm chết người là có thói quen chỉ tập trung vào việc phân tích dữ liệu mà thiếu đi cái nhìn tổng quát trong việc giải quyết bài toán thực tế. Không chỉ thế, nhóm này không có thế mạnh trong việc trình bày và giao tiếp, dẫn đến các kết quả thực tế không được các đơn vị kinh doanh nghiệp vụ đón nhận và sử dụng.</p></li>
+<li>Nhóm một, <strong>chưa có nền tảng về phân tích thống kê</strong>. Ở nhóm này, các bạn thường không được đào tạo bài bản hoặc không có đủ điều kiện (phần lớn là về thời gian) để học các kiến thức về phân tích thống kê. Do nhu cầu của công việc, các bạn có thành thạo các kỹ năng về xây dựng báo cáo và phân tích khám phá dữ liệu đơn giản với SQL và Excel. Các bạn này thường thuộc các nhóm phân tích báo cáo (Business Intelligence) tại các tổ chức lớn hoặc làm trong startup. Điểm mạnh của nhóm này là làm việc sát với các bộ phận kinh doanh, hiểu rõ nghiệp vụ và nhu cầu nghiệp vụ. Tuy nhiên, điểm yếu của các bạn lại là không thể ứng dụng hoặc tự học và không biết cách triển khai các ứng dụng của khoa học dữ liệu ở mức độ cao vào công việc thực tế.</li>
+<li>Nhóm hai, <strong>có nền tảng vững vàng về kiến thức thống kê, dự báo nhưng lại quá chú trọng vào các yếu tố kỹ thuật</strong>. Ở nhóm này, các bạn đều có nền tảng kiến thức về toán, thống kê rất tốt. Một số bạn được học và đào tạo cơ bản về khoa học dữ liệu, học máy và các ứng dụng của khoa học dữ liệu. Các bạn này có thiên hướng thích xây dựng mô hình dự báo, thích làm các bài toán lớn trong kinh doanh. Điểm mạnh của nhóm này là rất thông minh, chịu khó học hỏi và có thể áp dụng những kỹ thuật phân tích mới vào thực tế một cách nhanh chóng. Nhưng ngược lại, nhóm này lại có nhược điểm chết người là có thói quen chỉ tập trung vào việc phân tích dữ liệu mà thiếu đi cái nhìn tổng quát trong việc giải quyết bài toán thực tế. Không chỉ thế, nhóm này không có thế mạnh trong việc trình bày và giao tiếp, dẫn đến các kết quả thực tế không được các đơn vị kinh doanh nghiệp vụ đón nhận và sử dụng.</li>
 </ul>
 <p>Đối với một tổ chức muốn phát triển dựa vào dữ liệu và muốn biến các quyết định của tổ chức dựa vào phân tích dữ liệu, cả hai nhóm trên đều là các trạng thái nên tránh và phải cân bằng được cả hai.</p>
 <center>
@@ -764,30 +764,15 @@ Phân tích dữ liệu là gì?
 <li><code>1-0</code> - Số 1 đứng trước, số 0 đứng sau. Trong trường hợp này, phân tích dữ liệu đứng ngang hàng và đi sau hoạt động kinh doanh. Trong trường hợp này, sự phối hợp giữa kinh doanh và phân tích rất nhuần nhuyễn và khéo léo - tư duy của phân tích số liệu được triển khai đơn giản nhưng mạch lạc, sắc sảo và <em>khiêm tốn</em> trong quá trình thúc đẩy kinh doanh. Trong trường hợp này, giá trị của phân tích dữ liệu có thể giúp giá trị của kinh doanh tăng lên 10 lần.</li>
 </ul>
 <p>Như vậy, trong 3 trường hợp trên, chỉ có 1 trường hợp duy nhất phân tích dữ liệu có thể đem lại giá trị cho kinh doanh thực tiễn. Các tổ chức lớn gặp khó khăn trong việc biến ứng dụng phân tích số liệu vào thực tiễn do đặt sai vị trí của số 0 (phân tích số liệu) trong cả tổ chức.</p>
-<center>
-<font size="4">§</font>
-</center>
-<p><strong>Ba cấp độ của viết code</strong>: Trong quá trình làm việc trong lĩnh vực phân tích dữ liệu, chắc chắn chúng ta sẽ phải học và sử dụng các ngôn ngữ truy vấn/phân tích dữ liệu và sẽ trải qua 3 cấp độ như sau:</p>
-<ol type="1">
-<li><p>Viết thứ đơn giản. Ở cấp độ này, các bạn thường mới nhập môn phân tích dữ liệu, đầy lo lắng và thiếu tự tin ở bản thân và bắt đầu với những bài phân tích đơn giản để áp dụng các kiến thức mới học.</p></li>
-<li><p>Viết càng nguy hiểm càng tốt. Ở giai đoạn này, các bạn đã có một lượng kiến thức nền tương đối vững và bắt đầu đi vào các phương pháp nâng cao. Do đó, các bạn thường có xu hướng khiến mọi thứ trở nên <em>nguy hiểm</em>, tô vẽ và đưa ra nhiều yếu tố không thực sự cần thiết. Với các bạn có xu hướng trực quan hóa, sẽ là đưa ra các biểu đồ đầy màu sắc và cực kỳ nguy hiểm. Với các bạn có xu hướng xây dựng mô hình dự báo, sẽ là dùng mô hình dự báo, học máy hoặc deep-learning mọi lúc, mọi nơi. Kết quả sẽ khiến người đọc ấn tượng nhưng có thể chưa thực sự có tính ứng dụng cao.</p></li>
-<li><p>Chỉ viết những thứ có khả năng tái sử dụng, giải quyết vấn đề bằng phương pháp đơn giản nhất có thể có. Ở giai đoạn này, các bạn đã dung hòa được rất nhiều kiến thức của nghành phân tích dữ liệu với nhau và tiếp cận các vấn đề một cách mạch lạc, logic và rất chặt chẽ. Các bạn nắm rất vững khi nào nên dùng các phương pháp phân tích khám phá dữ liệu đơn giản thay cho các thuật toán phức tạp trong việc giải quyết các vấn đề kinh doanh.</p></li>
-</ol>
-<p><strong>Công thức tổng quát khi viết code</strong>:</p>
-<p>Khi phân tích dữ liệu (hay bất cứ hoạt động nào cần phải viết code), công thức tổng quát cần phải ghi nhớ là:</p>
-<blockquote class="blockquote">
-<p><span class="math display">\[e = mc^2 \Leftrightarrow error = ({more\;code})^2\]</span></p>
-</blockquote>
-<p>Do đó, càng viết đơn giản, khả năng chúng ta giảm thiểu được các sai sót trong quá trình phân tích dữ liệu càng nhiều.</p>
 </section>
 <section id="phân-loại-hoạt-động-phân-tích-dữ-liệu" class="level2" data-number="1.2">
 <h2 data-number="1.2" class="anchored" data-anchor-id="phân-loại-hoạt-động-phân-tích-dữ-liệu"><span class="header-section-number">1.2</span> Phân loại hoạt động phân tích dữ liệu</h2>
 <section id="dựa-theo-cách-thức-tác-động-đến-khách-hàng" class="level3" data-number="1.2.1">
 <h3 data-number="1.2.1" class="anchored" data-anchor-id="dựa-theo-cách-thức-tác-động-đến-khách-hàng"><span class="header-section-number">1.2.1</span> Dựa theo cách thức tác động đến khách hàng</h3>
-<p>Khi làm việc thực tế, có nhiều nhánh trong hoạt động phân tích dữ liệu dẫn tới việc gây hiểu nhầm giữa các khía cạnh khác nhau. Khái quát hóa có thể chia làm hai nhánh lớn sau.</p>
+<p>Nếu chia theo cách thức hoạt động phân tích tác động lên khách hàng, ta có thể chia thành 2 nhóm lớn sau:</p>
 <ul>
-<li><p><strong>Phân tích dữ liệu để tác động lên khách hàng một cách trực tiếp</strong>. Với cách tiếp cận này, để có thể tác động trực tiếp lên khách hàng, kết quả của hoạt động phân tích dữ liệu phải được đưa vào thực tế dưới dạng API và tác động trực tiếp lên UI mà người dùng sử dụng. Các hệ thống <code>recommendation engine</code> trên các trang thương mại điện tử thuộc loại này</p></li>
-<li><p><strong>Phân tích dữ liệu để tác động lên khách hàng thông qua những người ra quyết định</strong>. Đây là nhóm được sử dụng đặc biệt nhiều trong thực tế nhưng lại bị đánh giá thấp hơn so với nhóm đầu tiên. Nhánh ứng dụng phân tích dữ liệu này được dùng đặc biệt nhiều trong các tổ chức lớn như ngân hàng, bảo hiểm… Trong nhóm này lại tách thành hai nhóm nhỏ:</p>
+<li><strong>Phân tích dữ liệu để tác động lên khách hàng một cách trực tiếp</strong>. Với cách tiếp cận này, để có thể tác động trực tiếp lên khách hàng, kết quả của hoạt động phân tích dữ liệu phải được đưa vào thực tế dưới dạng API và tác động trực tiếp lên UI mà người dùng sử dụng. Các hệ thống <code>recommendation engine</code> trên các trang thương mại điện tử thuộc loại này</li>
+<li><strong>Phân tích dữ liệu để tác động lên khách hàng thông qua những người ra quyết định</strong>. Đây là nhóm được sử dụng đặc biệt nhiều trong thực tế nhưng lại bị đánh giá thấp hơn so với nhóm đầu tiên. Nhánh ứng dụng phân tích dữ liệu này được dùng đặc biệt nhiều trong các tổ chức lớn như ngân hàng, bảo hiểm… Trong nhóm này lại tách thành hai nhóm nhỏ:
 <ul>
 <li><strong>Kết quả phân tích được thể hiện dưới dạng trình chiếu</strong> - công cụ thường hay được sử dụng nhất là powerpoint</li>
 <li><strong>Kết quả được sử dụng dưới dạng phần mềm (data tools)</strong>. Với dạng này, người ra quyết định sẽ sử dụng các kết quả từ các công cụ này để đánh giá và ra quyết định thay đổi chính sách, sản phẩm cho phù hợp với khách hàng. Các công cụ như Google Analytics, Tableau (BI tools), hệ thống CRM, Customer 360 thuộc dạng này.</li>
@@ -802,12 +787,12 @@ Phân tích dữ liệu là gì?
 </center>
 <p>Căn cứ theo nguồn dữ liệu sử dụng để phân tích, có thể tách ra thành hai nhóm lớn:</p>
 <ul>
-<li><p><strong>Dữ liệu trong nội bộ doanh nghiệp</strong>.</p>
+<li><strong>Dữ liệu trong nội bộ doanh nghiệp</strong>.
 <ul>
 <li><strong>Nhóm dữ liệu nền tảng</strong>: Nguồn dữ liệu này thể hiện phần lớn hành vi, thói quen của khách hàng đối với sản phẩm, dịch vụ do doanh nghiệp nắm giữ. Tổ chức càng lớn, nguồn dữ liệu này càng khó được khai thác hết nếu không có hệ thống Data Warehouse tốt do gặp phải vấn đề phân tán và chất lượng dữ liệu. Các hệ thống như T24, W4, EBank, LOS của ngân hàng.. thuộc vào nhóm này</li>
 <li><strong>Nhóm dữ liệu hành vi nền tảng kỹ thuật số</strong>: Dữ liệu chứa nhiều các thông tin event, activity của khách hàng trên web, app - thường được để dạng ẩn danh hoặc đòi hỏi sự hỗ trợ từ mảng công nghệ để có thể sử dụng và tracking. Nguồn dữ liệu từ Google Analytics, Insider, Firebase… thuộc nhóm này</li>
 </ul></li>
-<li><p><strong>Dữ liệu bên ngoài doanh nghiệp</strong>. Nguồn dữ liệu không do doanh nghiệp quản lý, phản ánh hành vi của khách hàng nói chung. Ví dụ - social network, blog, giao dịch trên các trang thương mại điện tử, etc.</p></li>
+<li><strong>Dữ liệu bên ngoài doanh nghiệp</strong>. Nguồn dữ liệu không do doanh nghiệp quản lý, phản ánh hành vi của khách hàng nói chung. Ví dụ - social network, blog, giao dịch trên các trang thương mại điện tử, etc.</li>
 </ul>
 <center>
 <font size="4">§</font>
@@ -911,40 +896,40 @@ Disclaimer
 <p>Các nội dung trong các chương tiếp theo là tài liệu tổng hợp từ nhiều nguồn và được sử dụng với mục đích cá nhân như tài liệu tra cứu tổng hợp nên không thể tránh khỏi việc thiếu sót. Tài liệu này chỉ nên dùng như <strong>tài liệu tham khảo</strong>.</p>
 </div>
 </div>
-<div class="callout callout-style-default callout-tip callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Lưu ý
-</div>
-</div>
-<div class="callout-body-container callout-body">
+<center>
+<font size="4">§</font>
+</center>
 <p>Đối với các bạn muốn tập trung phát triển Insights, nên tập trung đọc các chương sau:</p>
-<p><strong>Cấp độ 1 - Phân tích khám phá - bắt buộc phải nắm vững (chương 1-7)</strong></p>
+<p><strong>Cấp độ 1 - Phân tích khám phá - bắt buộc phải nắm vững (chương 2-8)</strong></p>
 <ul>
-<li>Giới thiệu cơ bản về R (chương 1)</li>
-<li>Xây dựng báo cáo với Rmarkdown</li>
-<li>Biến đổi dữ liệu với DPLYR</li>
-<li>Phân rã &amp; xoay chiều dữ liệu</li>
-<li>Ngữ pháp biểu đồ với GGPLOT2</li>
-<li>Các chỉ số thống kê cơ bản</li>
+<li>Giới thiệu cơ bản về R (chương 2)</li>
+<li>Xây dựng báo cáo với rmarkdown &amp; quarto (chương 3)</li>
+<li>Import dữ liệu (chương 4)</li>
+<li>Ngữ pháp của biến đổi dữ liệu với dplyr (chương 5)</li>
+<li>Làm sạch và biến đổi dữ liệu nâng cao (chương 6)</li>
+<li>Ngữ pháp biểu đồ với <code>ggplot2</code> (chương 7)</li>
+<li>Các chỉ số thống kê mô tả cơ bản (rất quan trọng) (chương 8)</li>
 </ul>
-<p><strong>Cấp độ 2 - Phân tích khám phá - Kỹ thuật nâng cao - nhưng vẫn cần bắt buộc phải nắm vững (chương 8-10)</strong></p>
+<p>Ngoài ra, có thể tham khảo thêm các mẹo trong chương 18</p>
 <ul>
-<li>Xử lý dữ liệu text</li>
-<li>Lập trình với purrr</li>
+<li>Các mẹo trong R (chương 18)</li>
+</ul>
+<p><strong>Cấp độ 2 - Phân tích khám phá - Kỹ thuật nâng cao - nhưng vẫn cần bắt buộc phải nắm vững (chương 9-11)</strong></p>
+<ul>
 <li>Lập trình hàm</li>
+<li>Lập trình chức năng hàm với <code>purrr</code></li>
+<li>Xử lý dữ liệu <code>text</code></li>
 </ul>
 <p><strong>Cấp độ 3 - cơ bản về các thuật toán &amp; nguyên lý thường sử dụng</strong>:</p>
 <ul>
-<li>Nguyên lý dự báo &amp; cơ bản học máy (chương 18)</li>
-<li>Mô hình hồi quy tuyến tính (chương 19)</li>
-<li>Mô hình logistics (chương 20)</li>
+<li>Nguyên lý dự báo &amp; cơ bản học máy (chương 19)</li>
+<li>Mô hình hồi quy tuyến tính (chương 20)</li>
+<li>Mô hình logistics (chương 21)</li>
 <li>Cây quyết định &amp; họ cây quyết định (chương 21-22)</li>
 <li>Phân cụm với kmeans (chương 38)</li>
 <li>Basket Analysis (chương 39)</li>
+<li>Tidymodels (chương 31)</li>
+<li>Dự báo chuỗi thời gian với học máy (chương 44)</li>
 </ul>
 <p><strong>Nâng cao</strong></p>
 <ul>
@@ -952,9 +937,8 @@ Lưu ý
 <li>Quantile Regression (chương 59)</li>
 <li>Chuỗi thời gian (chương 41)</li>
 </ul>
-<p>Các chương và nội dung khác dùng để tham khảo đọc thêm nếu cần. Tuy nhiên, với việc nắm vững các kỹ thuật trên đã giải quyết 95%+ các bài toàn thực tế trên các lĩnh vực khác nhau và giúp các bạn có thể dịch chuyển nhanh chóng sang các tầng insights nâng cao</p>
-</div>
-</div>
+<p>Các chương và nội dung khác dùng để tham khảo đọc thêm nếu cần. Tuy nhiên, với việc nắm vững các kỹ thuật trên đã giải quyết 95%+ các bài toàn thực tế trên các lĩnh vực khác nhau và giúp các bạn có thể dịch chuyển nhanh chóng sang các tầng insights nâng cao.</p>
+<p>Ngoài ra, chương 72 - các lưu ý phân tích thực tế ghi chú thêm các lưu ý khi triển khai &amp; tổ chức phân tích dữ liệu thực tế.</p>
 
 
 </section>
