--- a/public/ds-book-r/p03-01-gioi-thieu-hoc-may.html
+++ b/public/ds-book-r/p03-01-gioi-thieu-hoc-may.html
@@ -814,7 +814,7 @@ ul.task-list li input[type="checkbox"] {
 <li><strong>Bước 5</strong>: Đánh giá mô hình</li>
 <li><strong>Bước 6</strong>: Đưa mô hình vào sử dụng</li>
 </ul>
-<p><img src="Images/p03-01-crisdm.png" class="img-fluid"></p>
+<p><img src="Images/p03-01-crisdm.png" class="img-fluid" style="width:60.0%"></p>
 <center>
 <font size="4">§</font>
 </center>
@@ -1116,8 +1116,19 @@ Variance vs Bias
 <center>
 <font size="4">§</font>
 </center>
-<p>:::{.callout-note} ## Đánh đổi giữa độ chính xác và khả năng giải thích</p>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Đánh đổi giữa độ chính xác và khả năng giải thích
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p>Khi xây dựng mô hình, ta buộc phải dánh đổi giữa độ chính xác của mô hình vs.&nbsp;khả năng diễn giải mô hình và không tồn tại một mô hình tốt nhất cho mọi trường hợp. Do đó, ta cần phải lựa chọn mô hình theo từng đối tượng.</p>
+</div>
+</div>
 </section>
 <section id="độ-phức-tạp-mô-hinh-vs-sai-số-trên-tập-train" class="level3" data-number="19.4.4">
 <h3 data-number="19.4.4" class="anchored" data-anchor-id="độ-phức-tạp-mô-hinh-vs-sai-số-trên-tập-train"><span class="header-section-number">19.4.4</span> Độ phức tạp mô hinh vs sai số trên tập train</h3>
