--- a/public/ds-book-r/p13-01-phan-tich-thuc-te.html
+++ b/public/ds-book-r/p13-01-phan-tich-thuc-te.html
@@ -658,6 +658,10 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#cách-tìm-kiếm-insights" id="toc-cách-tìm-kiếm-insights" class="nav-link" data-scroll-target="#cách-tìm-kiếm-insights"><span class="header-section-number">72.1.2</span> Cách tìm kiếm insights</a></li>
   </ul></li>
   <li><a href="#cách-tổ-chức-project" id="toc-cách-tổ-chức-project" class="nav-link" data-scroll-target="#cách-tổ-chức-project"><span class="header-section-number">72.2</span> Cách tổ chức project</a></li>
+  <li><a href="#các-lưu-ý-khác" id="toc-các-lưu-ý-khác" class="nav-link" data-scroll-target="#các-lưu-ý-khác"><span class="header-section-number">72.3</span> Các lưu ý khác</a>
+  <ul>
+  <li><a href="#viết-code" id="toc-viết-code" class="nav-link" data-scroll-target="#viết-code"><span class="header-section-number">72.3.1</span> Viết code</a></li>
+  </ul></li>
   </ul>
 </nav>
     </div>
@@ -813,8 +817,24 @@ Lưu ý
 <li>Folder <code>01-data</code>: Chứa các file kết quả đầu ra của các nhóm script.</li>
 <li><code>analysis.qmd</code>: Là file chứa kết quả trình bày phân tích cuối. Ở file này, ta nên hạn chế load dữ liệu nặng mà nên sử dụng kết quả đầu ra của các script trước để gia tăng tốc độ <em>knit</em></li>
 </ul>
+</section>
+<section id="các-lưu-ý-khác" class="level2" data-number="72.3">
+<h2 data-number="72.3" class="anchored" data-anchor-id="các-lưu-ý-khác"><span class="header-section-number">72.3</span> Các lưu ý khác</h2>
+<section id="viết-code" class="level3" data-number="72.3.1">
+<h3 data-number="72.3.1" class="anchored" data-anchor-id="viết-code"><span class="header-section-number">72.3.1</span> Viết code</h3>
+<p>Cách viết code của một cá nhân sẽ trải qua 3 bước phát triển như sau:</p>
+<p><strong>1. Viết thứ đơn giản</strong>. Ở cấp độ này, các bạn thường mới nhập môn phân tích dữ liệu, đầy lo lắng và thiếu tự tin ở bản thân và bắt đầu với những bài phân tích đơn giản để áp dụng các kiến thức mới học.</p>
+<p><strong>2. Viết càng nguy hiểm càng tốt</strong>. Ở giai đoạn này, các bạn đã có một lượng kiến thức nền tương đối vững và bắt đầu đi vào các phương pháp nâng cao. Do đó, các bạn thường có xu hướng khiến mọi thứ trở nên <em>nguy hiểm</em>, tô vẽ và đưa ra nhiều yếu tố không thực sự cần thiết. Với các bạn có xu hướng trực quan hóa, sẽ là đưa ra các biểu đồ đầy màu sắc và cực kỳ nguy hiểm. Với các bạn có xu hướng xây dựng mô hình dự báo, sẽ là dùng mô hình dự báo, học máy hoặc deep-learning mọi lúc, mọi nơi. Kết quả sẽ khiến người đọc ấn tượng nhưng có thể chưa thực sự có tính ứng dụng cao.</p>
+<p><strong>3. Chỉ viết những thứ có khả năng tái sử dụng</strong>: Giải quyết vấn đề bằng phương pháp đơn giản nhất có thể có. Ở giai đoạn này, các bạn đã dung hòa được rất nhiều kiến thức của nghành phân tích dữ liệu với nhau và tiếp cận các vấn đề một cách mạch lạc, logic và rất chặt chẽ. Các bạn nắm rất vững khi nào nên dùng các phương pháp phân tích khám phá dữ liệu đơn giản thay cho các thuật toán phức tạp trong việc giải quyết các vấn đề kinh doanh.</p>
+<p><strong>Công thức tổng quát khi viết code</strong>:</p>
+<p>Khi phân tích dữ liệu (hay bất cứ hoạt động nào cần phải viết code), công thức tổng quát cần phải ghi nhớ là:</p>
+<blockquote class="blockquote">
+<p><span class="math display">\[e = mc^2 \Leftrightarrow \text{error} = \text{more code}^2\]</span></p>
+</blockquote>
+<p>Do đó, càng viết đơn giản, khả năng chúng ta giảm thiểu được các sai sót trong quá trình phân tích dữ liệu càng nhiều.</p>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
