--- a/public/ds-book-r/p13-01-phan-tich-thuc-te.html
+++ b/public/ds-book-r/p13-01-phan-tich-thuc-te.html
@@ -706,8 +706,8 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p>Ví dụ:</p>
 <ul>
-<li>Giả thuyết loại 1: Tự động tăng hạn mức thẻ tín dụng giúp ngân hàng tăng dự nợ thẻ tín dụng? (Trẳ lời dạng có/không)</li>
-<li>Giả thuyết loại 2: Tự động tăng hạn mức giúp tăng bao nhiêu dư nợ thẻ tín dụng? (câu hỏi định lượng)</li>
+<li><strong>Giả thuyết loại 1</strong>: Tự động tăng hạn mức thẻ tín dụng giúp ngân hàng tăng dự nợ thẻ tín dụng? (Trẳ lời dạng có/không)</li>
+<li><strong>Giả thuyết loại 2</strong>: Tự động tăng hạn mức giúp tăng bao nhiêu dư nợ thẻ tín dụng? (câu hỏi định lượng)</li>
 </ul>
 <hr>
 <p>Khi phân tích, đặc biệt tránh các câu hỏi thiếu cụ thể từ đơn vị kinh doanh. Ví dụ: <em>Hành vi của khách hàng sau khi phàn nàn lên tổng đài là gì</em>?</p>
@@ -834,9 +834,19 @@ Lưu ý
 <p><strong>3. Chỉ viết những thứ có khả năng tái sử dụng</strong>: Giải quyết vấn đề bằng phương pháp đơn giản nhất có thể có. Ở giai đoạn này, các bạn đã dung hòa được rất nhiều kiến thức của nghành phân tích dữ liệu với nhau và tiếp cận các vấn đề một cách mạch lạc, logic và rất chặt chẽ. Các bạn nắm rất vững khi nào nên dùng các phương pháp phân tích khám phá dữ liệu đơn giản thay cho các thuật toán phức tạp trong việc giải quyết các vấn đề kinh doanh.</p>
 <p><strong>Công thức tổng quát khi viết code</strong>:</p>
 <p>Khi phân tích dữ liệu (hay bất cứ hoạt động nào cần phải viết code), công thức tổng quát cần phải ghi nhớ là:</p>
-<blockquote class="blockquote">
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Warning
+</div>
+</div>
+<div class="callout-body-container callout-body">
 <p><span class="math display">\[e = mc^2 \Leftrightarrow \text{error} = \text{more code}^2\]</span></p>
-</blockquote>
+</div>
+</div>
 <p>Do đó, càng viết đơn giản, khả năng chúng ta giảm thiểu được các sai sót trong quá trình phân tích dữ liệu càng nhiều.</p>
 
 
