--- a/public/ds-book-r/p03-01-gioi-thieu-hoc-may.html
+++ b/public/ds-book-r/p03-01-gioi-thieu-hoc-may.html
@@ -847,6 +847,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Phân chia quan sát ngẫu nhiên thông thường (<code>simple random sampling</code>)</li>
 <li>Phân chia quan sát sao cho phân phối của biến cần dự báo trên hai tập <code>train</code> và <code>test</code> giống nhau (<code>stratified sampling</code>)</li>
 </ul>
+<p><img src="Images/p03-01-train-test.jpg" class="img-fluid"></p>
 <center>
 <font size="4">§</font>
 </center>
