--- a/static/ca-nhan/guitar.html
+++ b/static/ca-nhan/guitar.html
@@ -2161,10 +2161,130 @@ thôi.</p>
 <p>Giấc mơ [C] đầu.</p>
 </div>
 </div>
-<div id="nhạc-thiền" class="section level1" number="3">
-<h1><span class="header-section-number">3</span> Nhạc thiền</h1>
-<div id="nhất-thanh-phật-hiệu-nhất-thanh-tâm" class="section level2" number="3.1">
-<h2><span class="header-section-number">3.1</span> Nhất thanh phật hiệu
+<div id="nhạc-nước-ngoài" class="section level1" number="3">
+<h1><span class="header-section-number">3</span> Nhạc nước ngoài</h1>
+<div id="remember-when" class="section level2" number="3.1">
+<h2><span class="header-section-number">3.1</span> Remember when</h2>
+<p>[G] [Em] [C] [D] (2x)</p>
+<p>Remember [G]when [Em]… I was young [C] and so were you [D]</p>
+<p>And time [G]stood [Em]… still and [C] love was all we [D] knew</p>
+<p>You were the [G] first, so was [Em] I<br />
+We made [C] love and then you [D] cried<br />
+Remember [G] when [Em]… [C]… [D]…<br />
+Remember [G] when [Em]… we vowed [C] the vows<br />
+And walked the [D] walk<br />
+Gave our [G] hearts, [Em] made [C] the start, and it [D] was hard<br />
+We lived and [G] learned, life threw [Em] curves<br />
+There was [C] joy, there was [D] hurt<br />
+Remember [G] when [D]<br />
+Remember [G] when [Em] old [C] ones died and new [D] were born<br />
+And life was [G] changed, [Em] disas [C] sembled, [D] rear ranged<br />
+We came [G] together, [Em] fell apart<br />
+And [C] broke each other’s [D] hearts<br />
+Remember [G] when [G7]<br />
+[G] [G]<br />
+[G] [E]<br />
+Remember [A] when [F#m] the [D] sound of [E] little feet<br />
+Was the [A] music [F#m]<br />
+We [D] danced to week [E] to week<br />
+Brought back the [A] love, we found [F#m] trust<br />
+Vowed we’d [D] never give it [E] up<br />
+Remember [A] when [E]<br />
+Remember [A] when [D] thirty seemed so [E] old<br />
+Now lookin’ [A] back, [F#m] it’s [D] just a [E] steppin’ stone<br />
+To where we [A] are,<br />
+Where we’ve [F#m] been<br />
+Said we’d [D] do it all [E] again<br />
+Remember [A] when [E]<br />
+Remember [A] when [F#m] we [D] said when we [E] turned gray<br />
+When the [A] children [F#m] grow [D] up and [E] move away<br />
+We won’t be [A] sad, we’ll be [F#m] glad<br />
+For [D] all the life we’ve [E] had<br />
+And we’ll remember [A] when [E]<br />
+Remember [A] when [E]</p>
+</div>
+<div id="thần-thoại" class="section level2" number="3.2">
+<h2><span class="header-section-number">3.2</span> Thần thoại</h2>
+<p>[Em] [Bm] [C] [Bm]<br />
+[Em] [D] [C] [D]</p>
+<ol style="list-style-type: decimal">
+<li><p>[Em] Người khuất [D] xa đường [C] về sao thênh thang [G]
+quá<br />
+Người [C] gần bước [D] chân vẫn như còn [G] xa<br />
+Dù [C] lòng nhớ [D] thương người luôn vẫn [G] âm [Em] thầm<br />
+[C] Mà nói [D] không nên [Em] lời</p></li>
+<li><p>[Em] Ngày tháng [D] qua, [C] tình trong anh chôn [G] dấu<br />
+[C] Người biết [D] chăng trái tim này [G] khổ đau<br />
+Lòng [C] hoài ngóng [D] trông được nghe bước [G] chân em [Em] về<br />
+[C] Mà cứ [D] như vô [Em] tình.</p></li>
+</ol>
+<p>ĐK:<br />
+Người ơi [Em] anh có biết em [Bm] đang chờ, [C] lời yêu [D] anh dấu [G]
+kín<br />
+Mà sao [Em] em vẫn thấy anh [Bm] âm thầm [C] mình anh [D] với cô [G]
+đơn<br />
+Giờ ta [Em] đây đã đến bên [Bm] nhau rồi [C] mà sao [D] anh chẳng [G]
+nói<br />
+Thời gian [Em] trôi em vẫn luôn [Bm] mong chờ [C] mình sẽ [D] mãi bên
+[G] nhau</p>
+</div>
+<div id="proud-of-you" class="section level2" number="3.3">
+<h2><span class="header-section-number">3.3</span> Proud of you</h2>
+<p>Intro: [C] [G] [Am] [Em] [F] [C] [Dm7] [G] [G7]</p>
+<p>[C] Love in your [G] eyes<br />
+Sitting [Am] silent by my [Em] side<br />
+Going [F] on holding [C] hand<br />
+Walking [Dm7] through the [G] nights</p>
+<p>Hold me [C] up hold me [G] tight<br />
+Lift me [Am] up to touch the [Em] sky<br />
+Teaching [F] me to love with [C] heart<br />
+Helping [Dm] me open my [G] mind</p>
+<p>Chorus:<br />
+I can [C] fly<br />
+I’m [G] proud that I can [Am] fly<br />
+To [Em] give the best of [F] mine<br />
+Till [C] the end of the [Dm] time</p>
+<p>Be [G7] lieve me I can [C] fly<br />
+I’m [G] proud that I can [Am] fly<br />
+To [Em] give the best of [F] mine<br />
+The [G7] heaven in the [C] sky</p>
+<p>[C] Stars in the [G] sky<br />
+Wishing [Am] once upon a [Em] time<br />
+Give me [F] love make me [C] smile<br />
+Till the [Dm7] end of [G] life.</p>
+<p>Hold me [C] up hold me [G] tight<br />
+Lift me [Am] up to touch the [Em] sky<br />
+Teaching [F] me to love with [C] heart<br />
+Helping [Dm] me open my [G] mind</p>
+<p>I can [C] fly<br />
+I’m [G] proud that I can [Am] fly<br />
+To [Em] give the best of [F] mine<br />
+Till [C] the end of the [Dm] time</p>
+<p>Be [G7] lieve me I can [C] fly<br />
+I’m [G] proud that I can [Am] fly<br />
+To [Em] give the best of [F] mine<br />
+The [G7] heaven in the [C] sky</p>
+<p>Dạo giữa: [C]- [C/Bb]- [F/A]- [G7]- [C]- [C/B]- [F]- [G7]</p>
+<p>[F] Can’t you be [G] lieve that you light [Em] up my [Am] way<br />
+No matter [Dm] how that ease my path<br />
+I’ll [G7] never lose my [G] faith</p>
+<p>Chorus:<br />
+See me [C] fly<br />
+I’m [G] proud to fly up [Am] high<br />
+Show [Em] you the best of [F] mine<br />
+Till [C] the end of the [Dm] time</p>
+<p>Be [G7] lieve me I can [C] fly<br />
+I’m [G] singing in the [Am] sky<br />
+Show [Em] you the best of [F] mine<br />
+The [G7] heaven in the [C] sky</p>
+<p>[F] Nothing can [C/E] stop me<br />
+[Dm7] Spread my [G] wings so [C] wide — [Am]— [F]— [G]— [C]</p>
+</div>
+</div>
+<div id="nhạc-thiền" class="section level1" number="4">
+<h1><span class="header-section-number">4</span> Nhạc thiền</h1>
+<div id="nhất-thanh-phật-hiệu-nhất-thanh-tâm" class="section level2" number="4.1">
+<h2><span class="header-section-number">4.1</span> Nhất thanh phật hiệu
 nhất thanh tâm</h2>
 <p>Intro:</p>
 <p>[Am][Em]-[Dm][Am]</p>
@@ -2219,16 +2339,16 @@ nhất thanh tâm</h2>
 <p>[C] Giận hờn nhau mãi [G] sao? [C] tình thương thắp lên [Am] nào</p>
 <p>[Dm] Từ bi cho trái [Em] tim giấc mộng bình [Am] an</p>
 </div>
-<div id="om-mani-padme-hum" class="section level2" number="3.2">
-<h2><span class="header-section-number">3.2</span> Om mani padme
+<div id="om-mani-padme-hum" class="section level2" number="4.2">
+<h2><span class="header-section-number">4.2</span> Om mani padme
 hum</h2>
 <p>[Dm] Om mani padme hum</p>
 <p>[C] Om mani padme hum</p>
 <p>[F] Om mani [Dm] padme hum</p>
 <p>[G] Om mani [Am] padme hum</p>
 </div>
-<div id="độ-ta-độ-nàng" class="section level2" number="3.3">
-<h2><span class="header-section-number">3.3</span> Độ ta độ nàng</h2>
+<div id="độ-ta-độ-nàng" class="section level2" number="4.3">
+<h2><span class="header-section-number">4.3</span> Độ ta độ nàng</h2>
 <p>Tone chuan Eb. Capo 3 choi C. Tone [C]</p>
 <p>Vòng hợp âm: [F] [G] [Em] [Am] [Dm] [G] [Am]</p>
 <p>Điệu Ballad</p>
@@ -2252,8 +2372,8 @@ hum</h2>
 <p>Cùng dâng đời bao lời [Am]ca Thiện lành [Am].</p>
 <p>Dạo: [F] [G] [Em] [Am] [Dm] [G] [Am]</p>
 </div>
-<div id="tương-tức" class="section level2" number="3.4">
-<h2><span class="header-section-number">3.4</span> Tương tức</h2>
+<div id="tương-tức" class="section level2" number="4.4">
+<h2><span class="header-section-number">4.4</span> Tương tức</h2>
 <p>Mình là cụm [Am]mây bay<br />
 Cũng như trời [Em]xanh cao<br />
 Là cánh chim [Am]ngàn<br />
